# Sony_Remote

./: .gitignore  CMakeLists.txt  README.md  enable_large_USB_buffer.sh
app/: CameraDevice.cpp  CameraDevice.h  MessageDefine.h  OpenCVWrapper.cpp  OpenCVWrapper.h  PropertyValueTable.cpp  PropertyValueTable.h  RemoteCli.cpp
app/CRSDK/: CameraRemote_SDK.h  CrCommandData.h  CrDefines.h  CrDeviceProperty.h  CrError.h  CrImageDataBlock.h  IDeviceCallback.h
cmake/: enum_cli_hdr.cmake  enum_cli_src.cmake
